# enterprise-ai-platform

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.ghcr.yml  docker-compose.yml  pytest.ini
.github/: dependabot.yml
agents/: README.md
backend/: README.md  alembic.ini  bandit.yaml  pyproject.toml
backend/app/: main.py
backend/app/ai/agents/: catalog.py  orchestrator.py
backend/app/ai/gateway/: pricing.py  service.py
backend/app/ai/guardrails/: pipeline.py
backend/app/ai/rag/: chunking.py  embeddings.py  service.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  auth.py  gateway.py  governance.py  health.py  identity.py  monitoring.py  prompts.py  rag.py  router.py  schemas.py
backend/app/application/services/: auth_service.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/domain/entities/: ai.py  identity.py
backend/app/domain/ports/: llm.py  vector_store.py
backend/app/domain/services/: routing.py
backend/app/infrastructure/cache/: rate_limiter.py
backend/app/infrastructure/database/: models.py  seed.py  session.py
backend/app/infrastructure/database/migrations/: env.py
backend/app/infrastructure/database/migrations/versions/: 0001_initial_schema.py
backend/app/infrastructure/database/repositories/: ai.py  base.py  identity.py
backend/app/infrastructure/ingestion/: parsers.py
backend/app/infrastructure/llm/: providers.py  registry.py
backend/app/infrastructure/observability/: metrics.py
backend/app/infrastructure/vector/: qdrant_store.py
backend/app/workers/: celery_app.py  ingestion_tasks.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: 01-business-analysis.md  02-functional-specifications.md  03-architecture.md  04-implementation-roadmap.md  administrator-guide.md  api.md  deployment-guide.md  developer-guide.md  production-readiness-checklist.md  release-notes.md  runbook.md  troubleshooting.md  user-guide.md
evaluation/: agent_eval.py  prompt_eval.py  rag_eval.py  run_all.py
examples/: api_usage.py
frontend/: package-lock.json  package.json  tailwind.config.ts
kubernetes/: backend.yaml  config.yaml  data-services.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  worker.yaml
(+51 files in other folders)
