[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-platform"
version = "1.0.0"
description = "Enterprise AI Platform — build, deploy, monitor and govern AI applications at scale"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hadirou Tamdamba" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "celery>=5.4",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.1",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "qdrant-client>=1.9",
  "tenacity>=8.3",
  "pypdf>=4.2",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "markdown-it-py>=3.0",
  "email-validator>=2.1",
]

[project.optional-dependencies]
providers = [
  "anthropic>=0.34",
  "openai>=1.40",
  "google-generativeai>=0.7",
  "mistralai>=1.0",
  "boto3>=1.34",
]
ocr = ["pytesseract>=0.3.10", "pillow>=10.3"]
ml = ["mlflow>=2.14", "scikit-learn>=1.5", "pandas>=2.2", "numpy>=1.26"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7.9",
  "pre-commit>=3.7",
  "faker>=25.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "RUF"]
ignore = [
  "B008",  # FastAPI Depends() in defaults is idiomatic
  "N818",  # BusinessRuleViolation/GuardrailViolation are deliberate domain terms
  "UP046", # classic Generic[] syntax kept for mypy plugin compatibility
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]

[tool.coverage.run]
source = ["app"]
omit = ["app/infrastructure/database/migrations/*"]
